--- a/web/cader/src/app/auth/register/card/card-view/card-view.component.html
+++ b/web/cader/src/app/auth/register/card/card-view/card-view.component.html
@@ -1,5 +1,5 @@
 <div [formGroup]="form" class="m2">
-  <div class="fullW">
+  <div class="col-xs-12 col-md-3">
     <inputText
       formControlName="name"
       [label]="'Nome'"
