--- a/web/cader/src/app/components/custom/autocomplete/autocomplete.component.html
+++ b/web/cader/src/app/components/custom/autocomplete/autocomplete.component.html
@@ -13,7 +13,7 @@
   
 </div> -->
 
-<div class="line borderAutoComplete">
+<div class="lineLeft borderAutoComplete">
   <div class="fullW">
     <span class="p-fluid p-float-label">
       <p-autoComplete
