--- a/web/cader/src/app/auth/controllership/movement/movement-filter/movement-filter.component copy.html
+++ b/web/cader/src/app/auth/controllership/movement/movement-filter/movement-filter.component copy.html
@@ -1,5 +1,5 @@
-<div class="line lineFilter">
-  <div class="itemFilter">
+<div class="row">
+  <div class="col-xs-12 col-md-5 mt2">
     <input-date
       [ob]="ob"
       [atributo]="'movimentDateStart'"
