--- a/web/cader/src/app/auth/controllership/movement/movement-view/movement-view.component.html
+++ b/web/cader/src/app/auth/controllership/movement/movement-view/movement-view.component.html
@@ -1,50 +1,52 @@
-<div [formGroup]="form" class="mt2 mX4">
-  <div class="fullW">
-    <inputText
-      formControlName="description"
-      [label]="'Descrição'"
-      [isDisabled]="isDisabled"
-    />
-  </div>
-  <div class="mt2">
-    <div class="lineBetween">
-      <inputDate
-        formControlName="movementDate"
-        [label]="'Data'"
-        [isDisabled]="isDisabled"
-      ></inputDate>
-      <autocomplete
-        formControlName="wallet"
-        [service]="serviceWallet"
-        [label]="'Carteira'"
+<div [formGroup]="form" class="mX2">
+  <div class="row">
+    <div class="col-xs-12 col-md-5 mt2">
+      <inputText
+        formControlName="description"
+        [label]="'Descrição'"
         [isDisabled]="isDisabled"
       />
+    </div>
+    <div class="col-xs-12 col-md-3 mt2">
+      <dropdown
+        [list]="typeList"
+        formControlName="typeRevenueExpence"
+        [label]="'Tipo'"
+        [isDisabled]="isDisabled"
+      ></dropdown>
+    </div>
+    <div class="col-xs-12 col-md-3 mt2">
+      <dropdown
+        [list]="typeList"
+        formControlName="origin"
+        [label]="'Origem'"
+        [isDisabled]="true"
+      ></dropdown>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12 col-md-3 mt2">
       <inputReais
         formControlName="value"
         [label]="'Valor'"
         [isDisabled]="isDisabled"
       />
     </div>
-  </div>
-  <div class="mt2">
-    <div class="lineBetween">
-      <div class="fullW mr2">
-        <dropdown
-          [list]="typeList"
-          formControlName="typeRevenueExpence"
-          [label]="'Tipo'"
-          [isDisabled]="isDisabled"
-        ></dropdown>
-      </div>
-      <div class="fullW ml2">
-        <dropdown
-          [list]="typeList"
-          formControlName="origin"
-          [label]="'Origem'"
-          [isDisabled]="true"
-        ></dropdown>
-      </div>
+    <div class="col-xs-12 col-md-3 mt2">
+      <inputDate
+        formControlName="movementDate"
+        [label]="'Data'"
+        [isDisabled]="isDisabled"
+      ></inputDate>
+    </div>
+
+    <div class="col-xs-12 col-md-3 mt2">
+      <autocomplete
+        formControlName="wallet"
+        [service]="serviceWallet"
+        [label]="'Carteira'"
+        [isDisabled]="isDisabled"
+      />
     </div>
   </div>
-  <div class="mt2"></div>
 </div>
