--- a/web/cader/src/app/components/custom/input-reais/input-reais.component.html
+++ b/web/cader/src/app/components/custom/input-reais/input-reais.component.html
@@ -1,14 +1,13 @@
-<div class="choose-quantity"></div>
-<span class="p-float-label">
-  <input
-    twoDecimalMask
-    class="inputReais"
-    pInputText
-    type="text"
-    [placeholder]="placeholder"
-    [disabled]="isDisabled"
-    (keyup)="teclar()"
-    [(ngModel)]="value"
-  />
-  <label htmlFor="username">{{ label }}</label>
-</span>
+<div class="fullW">
+  <span class="p-float-label">
+    <input
+      pInputText
+      type="text"
+      [placeholder]="placeholder"
+      [disabled]="isDisabled"
+      (keyup)="teclar()"
+      [(ngModel)]="value"
+    />
+    <label htmlFor="username">{{ label }}</label>
+  </span>
+</div>
