--- a/web/cader/src/app/auth/controllership/cardinvoice/card-invoice-filter/card-invoice-filter.component.html
+++ b/web/cader/src/app/auth/controllership/cardinvoice/card-invoice-filter/card-invoice-filter.component.html
@@ -1,29 +1,37 @@
-<div [formGroup]="form" class="mt4 mX6">
-  <div class="mt2 line">
-    <inputDate
-      formControlName="dueDateStart"
-      [label]="'Data Inicial Vencimento'"
-    ></inputDate>
-    <inputDate
-      formControlName="dueDateEnd"
-      [label]="'Data Final Vencimento'"
-    ></inputDate>
+<div [formGroup]="form" class="mX1">
+  <div class="row">
+    <div class="col-xs-12 col-md-6 col-lg-3 mt2">
+      <inputDate
+        formControlName="dueDateStart"
+        [label]="'Data Inicial Vencimento'"
+      ></inputDate>
+    </div>
+    <div class="col-xs-12 col-md-6 col-lg-3 mt2">
+      <inputDate
+        formControlName="dueDateEnd"
+        [label]="'Data Final Vencimento'"
+      ></inputDate>
+    </div>
+    <div class="col-xs-12 col-md-6 col-lg-3 mt2">
+      <inputDate
+        formControlName="closedDateStart"
+        [label]="'Data Inicial Fechamento'"
+      ></inputDate>
+    </div>
+    <div class="col-xs-12 col-md-6 col-lg-3 mt2">
+      <inputDate
+        formControlName="closedDateEnd"
+        [label]="'Data Final Fechamento'"
+      ></inputDate>
+    </div>
   </div>
-  <div class="mt2 line">
-    <inputDate
-      formControlName="closedDateStart"
-      [label]="'Data Inicial Fechamento'"
-    ></inputDate>
-    <inputDate
-      formControlName="closedDateEnd"
-      [label]="'Data Final Fechamento'"
-    ></inputDate>
-  </div>
-  <div class="mt2 line width10">
-    <autocomplete
-      formControlName="card"
-      [service]="cardService"
-      [label]="'Cartão'"
-    />
+  <div class="row">
+    <div class="col-xs-12 col-md-6 col-lg-4 mt2">
+      <autocomplete
+        formControlName="card"
+        [service]="cardService"
+        [label]="'Cartão'"
+      />
+    </div>
   </div>
 </div>
