--- a/web/cader/src/app/templates/tool-bar/tool-bar.component.html
+++ b/web/cader/src/app/templates/tool-bar/tool-bar.component.html
@@ -17,7 +17,7 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav ml-auto">
+    <ul class="navbar-nav ml-auto line">
       <li
         *ngIf="isList || isListFilter"
         class="linkBtn nav-item"
