--- a/web/cader/src/app/auth/controllership/cardinvoice/card-invoice-view/card-invoice-view.component.html
+++ b/web/cader/src/app/auth/controllership/cardinvoice/card-invoice-view/card-invoice-view.component.html
@@ -1,7 +1,7 @@
-<div [formGroup]="form" class="mt2 mX2 line">
-  <div class="line">
-    <div class="mt2 width25">
-      <div>
+<div [formGroup]="form" class="mX1">
+  <div class="row">
+    <div class="col-xs-12 col-md-4 mt2">
+      <div class="row">
         <autocomplete
           formControlName="card"
           [service]="cardService"
@@ -9,21 +9,21 @@
           [label]="'Cartão'"
         />
       </div>
-      <div class="mt3">
+      <div class="row mt2">
         <inputDate
           formControlName="closedDate"
           [label]="'Data Fechamento'"
           [isDisabled]="isDisabled"
         ></inputDate>
       </div>
-      <div class="mt3">
+      <div class="row mt2">
         <inputDate
           formControlName="dueDate"
           [label]="'Data Vencimento'"
           [isDisabled]="isDisabled"
         ></inputDate>
       </div>
-      <div class="mt3">
+      <div class="row mt2">
         <btn-primary
           (click)="findLauches()"
           [isDisabled]="isDisabled"
@@ -42,7 +42,7 @@
         </div>
       </div>
     </div>
-    <div class="mt2 ml2 line">
+    <div class="col-xs-12 col-md-8 mt2">
       <card-invoice-launch [listLaunches]="listLaunches" />
     </div>
   </div>
