--- a/web/cader/src/app/auth/controllership/cashinflow/cash-inflow-view/cash-inflow-payment-view/cash-inflow-payment-view.component.html
+++ b/web/cader/src/app/auth/controllership/cashinflow/cash-inflow-view/cash-inflow-payment-view/cash-inflow-payment-view.component.html
@@ -1,6 +1,6 @@
-<div [formGroup]="form" class="mt2 mX4">
-  <div class="linePayment lineLeft">
-    <div class="mr2">
+<div [formGroup]="form" class="mX1">
+  <div class="row">
+    <div class="col-xs-12 col-md-6 col-lg-4 mt2">
       <autocomplete
         formControlName="wallet"
         [service]="serviceWallet"
@@ -8,7 +8,7 @@
         [isDisabled]="isDisabled"
       />
     </div>
-    <div>
+    <div class="col-xs-12 col-md-6 col-lg-4 mt2">
       <autocomplete
         formControlName="paymentType"
         [service]="servicePaymentTypeService"
@@ -16,23 +16,26 @@
         [isDisabled]="isDisabled"
       />
     </div>
-  </div>
-  <div class="linePayment lineLeft">
-    <div class="mr2">
+    <div class="col-xs-12 col-md-6 col-lg-4 mt2">
       <inputDate
         formControlName="payDay"
         [label]="'Data Pagamento'"
         [isDisabled]="isDisabled"
       ></inputDate>
     </div>
-    <inputReais
-      formControlName="value"
-      [label]="'Valor'"
-      [isDisabled]="isDisabled"
-    />
   </div>
-  <div class="linePayment lineLeft">
-    <div class="fullW">
+
+  <div class="row">
+    <div class="col-xs-12 col-md-6 col-lg-4 mt2">
+      <inputReais
+        formControlName="value"
+        [label]="'Valor'"
+        [isDisabled]="isDisabled"
+      />
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 mt2">
       <inputText
         formControlName="observation"
         [label]="'Observação'"
