--- a/web/cader/src/app/auth/controllership/expense/expense-view/expense-detail/expense-detail.component.html
+++ b/web/cader/src/app/auth/controllership/expense/expense-view/expense-detail/expense-detail.component.html
@@ -1,57 +1,74 @@
-<div [formGroup]="form" class="mt2 mX4">
-  <div class="fullW">
-    <inputText
-      formControlName="description"
-      [label]="'Descrição'"
-      [isDisabled]="isDisabled"
-    />
+<div [formGroup]="form" class="mX1">
+  <div class="row">
+    <div class="col-xs-12 col-md-6">
+      <inputText
+        formControlName="description"
+        [label]="'Descrição'"
+        [isDisabled]="isDisabled"
+      />
+    </div>
   </div>
-  <div class="lineBetween mt2">
-    <inputDate
-      formControlName="dueDate"
-      [label]="'Data'"
-      [isDisabled]="isDisabled"
-    ></inputDate>
-    <inputReais
-      formControlName="openValue"
-      [label]="'Valor Aberto'"
-      [isDisabled]="true"
-    /><inputReais
-      formControlName="amountPaid"
-      [label]="'Valor Pago'"
-      [isDisabled]="true"
-    /><inputReais
-      formControlName="value"
-      [label]="'Valor Total'"
-      [isDisabled]="isDisabled"
-    />
-  </div>
-  <div class="lineBetween mt2">
-    <autocomplete
-      formControlName="wallet"
-      [service]="serviceWallet"
-      [label]="'Carteira'"
-      [isDisabled]="isDisabled"
-    />
-    <autocomplete
-      formControlName="paymentType"
-      [service]="servicePaymentTypeService"
-      [label]="'Meio de Pagamento'"
-      [isDisabled]="isDisabled"
-    />
-    <autocomplete
-      formControlName="person"
-      [service]="servicePerson"
-      [label]="'Pessoa'"
-      [isDisabled]="isDisabled"
-    />
-  </div>
-  <div class="lineBetween mt2 borderBottom">
-    <autocomplete
-      formControlName="expenseCategory"
-      [service]="serviceExpenseCategory"
-      [label]="'Categoria'"
-      [isDisabled]="isDisabled"
-    />
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 mt2">
+      <inputDate
+        formControlName="dueDate"
+        [label]="'Data'"
+        [isDisabled]="isDisabled"
+      ></inputDate>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 mt2">
+      <inputReais
+        formControlName="openValue"
+        [label]="'Valor Aberto'"
+        [isDisabled]="true"
+      />
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 mt2">
+      <inputReais
+        formControlName="amountPaid"
+        [label]="'Valor Pago'"
+        [isDisabled]="true"
+      />
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 mt2">
+      <inputReais
+        formControlName="value"
+        [label]="'Valor Total'"
+        [isDisabled]="isDisabled"
+      />
+    </div>
+
+    <div class="col-xs-12 col-sm-6 col-md-4 mt2">
+      <autocomplete
+        formControlName="wallet"
+        [service]="serviceWallet"
+        [label]="'Carteira'"
+        [isDisabled]="isDisabled"
+      />
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-4 mt2">
+      <autocomplete
+        formControlName="paymentType"
+        [service]="servicePaymentTypeService"
+        [label]="'Meio de Pagamento'"
+        [isDisabled]="isDisabled"
+      />
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-4 mt2">
+      <autocomplete
+        formControlName="person"
+        [service]="servicePerson"
+        [label]="'Pessoa'"
+        [isDisabled]="isDisabled"
+      />
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-4 mt2">
+      <autocomplete
+        formControlName="expenseCategory"
+        [service]="serviceExpenseCategory"
+        [label]="'Categoria'"
+        [isDisabled]="isDisabled"
+      />
+    </div>
   </div>
 </div>
