--- a/web/cader/src/app/components/fusion/modal-impl/modal-impl.component.html
+++ b/web/cader/src/app/components/fusion/modal-impl/modal-impl.component.html
@@ -1,27 +1,40 @@
 <div class="modal" [ngClass]="{ show: showModal }">
   <div class="modal-content">
-    <div class="barActions">
-      <div class="lineBetween">
-        <div class="title">
-          {{ title }}
-        </div>
-        <div class="actionBtn">
-          <btn-icon *ngIf="!stateView" (click)="save()">
-            <span class="material-icons"> save </span>
-          </btn-icon>
-          <!-- <btn-icon><i class="pi pi-spin pi-save"></i></btn-icon> -->
-          <btn-icon *ngIf="stateView" (click)="editData()">
-            <span class="material-icons"> edit </span>
-          </btn-icon>
-          <btn-icon *ngIf="stateView" (click)="deleteData()">
-            <span class="material-icons"> delete </span>
-          </btn-icon>
-          <btn-icon (click)="closeModal()">
-            <span class="material-icons"> clear </span>
-          </btn-icon>
-        </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-blue">
+      <span class="title">Filtro</span>
+      <div class="complete toRight">
+        <ul class="navbar-nav ml-auto ationBtn line">
+          <li
+            *ngIf="!stateView"
+            class="linkBtn nav-item"
+            type="button"
+            (click)="save()"
+          >
+            <span class="material-symbols-outlined icon-write"> save </span>
+          </li>
+          <li
+            type="button"
+            class="nav-item linkBtn"
+            (click)="editData()"
+            *ngIf="stateView"
+          >
+            <span class="material-symbols-outlined icon-write"> edit </span>
+          </li>
+          <li
+            type="button"
+            class="nav-item linkBtn"
+            (click)="deleteData()"
+            *ngIf="stateView"
+          >
+            <span class="material-symbols-outlined icon-write"> delete </span>
+          </li>
+          <li class="linkBtn nav-item" type="button" (click)="closeModal()">
+            <span class="material-symbols-outlined icon-write"> close </span>
+          </li>
+        </ul>
       </div>
-    </div>
+    </nav>
+
     <ng-content></ng-content>
   </div>
 </div>
