--- a/web/cader/src/app/templates/tool-bar/tool-bar.component.scss
+++ b/web/cader/src/app/templates/tool-bar/tool-bar.component.scss
@@ -1,30 +1,32 @@
-.example-spacer {
-  flex: 1 1 auto;
-}
+:host {
+  .example-spacer {
+    flex: 1 1 auto;
+  }
 
-.bg-blue {
-  background-color: rgb(65, 65, 255); /* Cor de fundo azul */
-}
+  .bg-blue {
+    background-color: rgb(65, 65, 255);
+  }
 
-.icon-write {
-  color: #fff;
-}
+  .icon-write {
+    color: #fff;
+  }
 
-.linkBtn {
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-}
+  .linkBtn {
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+  }
 
-.linkBtn:hover {
-  background: rgb(45, 45, 255);
-}
+  .linkBtn:hover {
+    background: rgb(45, 45, 255);
+  }
 
-.title {
-  color: #fff;
-  font-size: 1.2rem;
+  .title {
+    color: #fff;
+    font-size: 1.2rem;
+  }
 }
