--- a/web/cader/src/app/components/custom/input-reais/input-reais.component.html
+++ b/web/cader/src/app/components/custom/input-reais/input-reais.component.html
@@ -7,6 +7,7 @@
       [disabled]="isDisabled"
       (keyup)="teclar()"
       [(ngModel)]="value"
+      IkMoney
     />
     <label htmlFor="username">{{ label }}</label>
   </span>
