--- a/web/cader/src/app/components/fusion/modal-impl/modal-impl.component.html
+++ b/web/cader/src/app/components/fusion/modal-impl/modal-impl.component.html
@@ -1,7 +1,7 @@
 <div class="modal" [ngClass]="{ show: showModal }">
   <div class="modal-content">
     <nav class="navbar navbar-expand-lg navbar-light bg-blue">
-      <span class="title">Filtro</span>
+      <span class="title">{{ title }}</span>
       <div class="complete toRight">
         <ul class="navbar-nav ml-auto ationBtn line">
           <li
