--- a/web/cader/src/app/auth/controllership/movement/movement-view/movement-view.component.html
+++ b/web/cader/src/app/auth/controllership/movement/movement-view/movement-view.component.html
@@ -32,7 +32,7 @@
         [isDisabled]="isDisabled"
       />
     </div>
-    <div class="col-xs-12 col-md-3 mt2">
+    <div class="col-xs-12 col-md-4 col-lg-3 mt2">
       <inputDate
         formControlName="movementDate"
         [label]="'Data'"
@@ -40,7 +40,7 @@
       ></inputDate>
     </div>
 
-    <div class="col-xs-12 col-md-3 mt2">
+    <div class="col-xs-12 col-md-5 mt2">
       <autocomplete
         formControlName="wallet"
         [service]="serviceWallet"
