--- a/web/cader/src/app/components/custom/autocomplete/autocomplete.component.scss
+++ b/web/cader/src/app/components/custom/autocomplete/autocomplete.component.scss
@@ -17,7 +17,8 @@
     background: none;
     border: none;
     width: 50px;
-    height: 45px;
+    height: 50px;
+    display: flex;
     align-items: center;
     justify-content: center;
   }
