--- a/web/cader/src/app/auth/dev/bi/create-bi/components/biparameter-item/form-parameter-biview/form-parameter-biview.component.html
+++ b/web/cader/src/app/auth/dev/bi/create-bi/components/biparameter-item/form-parameter-biview/form-parameter-biview.component.html
@@ -88,7 +88,7 @@
             </ng-template>
           </div>
           <div *ngIf="showCustomizade">
-            <defined-parameter-view [list]="parameters" />
+            <defined-parameter-view [observableCustom]="observableCustom" />
           </div>
         </div>
       </div>
