--- a/web/cader/src/app/auth/dev/bi/create-bi/create-bi.component.html
+++ b/web/cader/src/app/auth/dev/bi/create-bi/create-bi.component.html
@@ -71,14 +71,13 @@
       role="tabpanel"
       aria-labelledby="parameter-tab"
     >
-      <div class="lineLeft">
-        <div class="divLists m1">
-          <biparameterItem [observable]="observableParameter" />
+      <biparameterItem [observable]="observableParameter" />
+      <!-- <div class="divLists m1">
+        
         </div>
         <div class="divForm">
           <form-parameter-biview [observable]="observableParameter" [bi]="bi" />
-        </div>
-      </div>
+        </div> -->
     </div>
   </div>
 </div>
