--- a/web/cader/src/app/auth/controllership/expense/expense-view/expense-detail/expense-detail.component.html
+++ b/web/cader/src/app/auth/controllership/expense/expense-view/expense-detail/expense-detail.component.html
@@ -17,18 +17,10 @@
       ></inputDate>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 mt2">
-      <inputReais
-        formControlName="openValue"
-        [label]="'Valor Aberto'"
-        [isDisabled]="true"
-      />
+      <inputReais formControlName="openValue" [label]="'Valor Aberto'" />
     </div>
     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 mt2">
-      <inputReais
-        formControlName="amountPaid"
-        [label]="'Valor Pago'"
-        [isDisabled]="true"
-      />
+      <inputReais formControlName="amountPaid" [label]="'Valor Pago'" />
     </div>
     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 mt2">
       <inputReais
