--- a/web/cader/src/app/auth/controllership/expense/expense-view/expense-payment-view/expense-payment-view.component.html
+++ b/web/cader/src/app/auth/controllership/expense/expense-view/expense-payment-view/expense-payment-view.component.html
@@ -26,11 +26,7 @@
   </div>
   <div class="row">
     <div class="col-xs-12 col-md-6 col-lg-4 mt2">
-      <inputReais
-        formControlName="value"
-        [label]="'Valor'"
-        [isDisabled]="isDisabled"
-      />
+      <inputReais formControlName="value" [label]="'Valor'" />
     </div>
   </div>
   <div class="row">
