--- a/web/cader/src/app/auth/controllership/expense/expense-view/expense-view.component.html
+++ b/web/cader/src/app/auth/controllership/expense/expense-view/expense-view.component.html
@@ -5,7 +5,7 @@
   <div id="idItem1">
     <expense-payment
       [listPayments]="listPayments"
-      [isDisabled]="!isDisabled"
+      [isDisabled]="isDisabled"
       [dataTableServicePaymentys]="dataTableServicePaymentys"
     ></expense-payment>
   </div>
