--- a/web/cader/src/app/components/custom/autocomplete/autocomplete.component.html
+++ b/web/cader/src/app/components/custom/autocomplete/autocomplete.component.html
@@ -23,7 +23,7 @@
         [suggestions]="list"
         (completeMethod)="filter($event)"
         field="description"
-        [disabled]="isDisabled"
+        [disabled]="disabled"
       ></p-autoComplete>
       <label>{{ label }}</label>
     </span>
