--- a/web/cader/src/app/components/custom/dropdown/dropdown.component.html
+++ b/web/cader/src/app/components/custom/dropdown/dropdown.component.html
@@ -6,7 +6,7 @@
       [(ngModel)]="selected"
       optionLabel="description"
       [style]="{ width: '100%' }"
-      [disabled]="isDisabled"
+      [disabled]="disabled"
     ></p-dropdown>
     <label>{{ label }} </label>
   </span>
