--- a/web/cader/src/app/components/custom/input-reais/input-reais.component.html
+++ b/web/cader/src/app/components/custom/input-reais/input-reais.component.html
@@ -4,7 +4,7 @@
       pInputText
       type="text"
       [placeholder]="placeholder"
-      [disabled]="isDisabled"
+      [disabled]="disabled"
       (keyup)="teclar()"
       [(ngModel)]="value"
       IkMoney
