--- a/web/cader/src/app/components/custom/input-switch/input-switch.component.html
+++ b/web/cader/src/app/components/custom/input-switch/input-switch.component.html
@@ -2,7 +2,7 @@
   <p-inputSwitch
     (click)="onClick()"
     [(ngModel)]="checked"
-    [disabled]="isDisabled"
+    [disabled]="disabled"
   >
   </p-inputSwitch>
   <span>{{ label }} </span>
