--- a/web/cader/src/app/auth/controllership/movement/movement-view/movement-view.component.html
+++ b/web/cader/src/app/auth/controllership/movement/movement-view/movement-view.component.html
@@ -20,17 +20,12 @@
         [list]="typeList"
         formControlName="origin"
         [label]="'Origem'"
-        [isDisabled]="true"
       ></dropdown>
     </div>
   </div>
   <div class="row">
     <div class="col-xs-12 col-md-3 mt2">
-      <inputReais
-        formControlName="value"
-        [label]="'Valor'"
-        [isDisabled]="isDisabled"
-      />
+      <inputReais formControlName="value" [label]="'Valor'" />
     </div>
     <div class="col-xs-12 col-md-4 col-lg-3 mt2">
       <inputDate
