--- a/web/cader/src/app/components/custom/input-date/input-date.component.html
+++ b/web/cader/src/app/components/custom/input-date/input-date.component.html
@@ -4,7 +4,7 @@
       [(ngModel)]="value"
       [showIcon]="true"
       dateFormat="dd/mm/yy"
-      [disabled]="isDisabled"
+      [disabled]="disabled"
     ></p-calendar>
 
     <label>{{ label }}</label>
