--- a/web/cader/src/app/components/custom/input-switch/input-switch.component.html
+++ b/web/cader/src/app/components/custom/input-switch/input-switch.component.html
@@ -2,8 +2,8 @@
   <p-inputSwitch
     (click)="onClick()"
     [(ngModel)]="checked"
-    [disabled]="disabled"
+    [disabled]="desabiitado"
   >
   </p-inputSwitch>
-  <span>{{ label }} </span>
+  <span>{{ label }}</span>
 </div>
