--- a/web/cader/src/app/auth/register/income-category/income-category-view/income-category-view.component.html
+++ b/web/cader/src/app/auth/register/income-category/income-category-view/income-category-view.component.html
@@ -1,16 +1,20 @@
 <div [formGroup]="form" class="m2">
-  <div class="col-xs-12 col-md-5">
-    <inputText
-      formControlName="name"
-      [label]="'Nome'"
-      [isDisabled]="isDisabled"
-    />
+  <div class="row">
+    <div class="col-xs-12 col-md-5">
+      <inputText
+        formControlName="name"
+        [label]="'Nome'"
+        [isDisabled]="isDisabled"
+      />
+    </div>
   </div>
-  <div class="mt2">
-    <inputSwitch
-      formControlName="active"
-      [label]="'Ativo'"
-      [isDisabled]="isDisabled"
-    />
+  <div class="row">
+    <div class="mt2 col-xs-12 col-md-5">
+      <inputSwitch
+        formControlName="active"
+        [label]="'Ativo'"
+        [isDisabled]="isDisabled"
+      />
+    </div>
   </div>
 </div>
