--- a/web/cader/src/app/auth/register/wallet/wallet-view/wallet-view.component.html
+++ b/web/cader/src/app/auth/register/wallet/wallet-view/wallet-view.component.html
@@ -8,7 +8,11 @@
       />
     </div>
     <div class="col-xs-12 col-md-3 mt2">
-      <inputReais formControlName="balance" [label]="'Saldo'" />
+      <inputReais
+        formControlName="balance"
+        [label]="'Saldo'"
+        [alwaysDisabled]="true"
+      />
     </div>
     <div>
       <inputSwitch
