--- a/web/cader/src/app/components/custom/input-radio/input-radio.component.html
+++ b/web/cader/src/app/components/custom/input-radio/input-radio.component.html
@@ -7,6 +7,7 @@
     [(ngModel)]="value"
     [id]="id"
     (change)="change()"
+    [disabled]="disabled"
   />
   <label class="form-check-label" [for]="id"> {{ label }} </label>
 </div>
