--- a/web/cader/src/app/components/prime/model-filter/model-filter.component.html
+++ b/web/cader/src/app/components/prime/model-filter/model-filter.component.html
@@ -4,7 +4,7 @@
       <span class="title">Filtro</span>
       <div class="complete toRight">
         <ul class="navbar-nav ml-auto ationBtn line">
-          <li class="linkBtn nav-item" type="button" (click)="toFilert()">
+          <li class="linkBtn nav-item" type="button" (click)="toFilter()">
             <span class="material-symbols-outlined icon-write"> search </span>
           </li>
           <li class="linkBtn nav-item" type="button" (click)="closeModal()">
