--- a/web/cader/src/app/components/custom/check/check.component.html
+++ b/web/cader/src/app/components/custom/check/check.component.html
@@ -5,6 +5,7 @@
     [(ngModel)]="value"
     [id]="id"
     (change)="change()"
+    [disabled]="disabled"
   />
   <label class="form-check-label" [for]="id">
     {{ label }}
