--- a/web/cader/src/app/components/custom/input-area/input-area.component.html
+++ b/web/cader/src/app/components/custom/input-area/input-area.component.html
@@ -4,7 +4,7 @@
     class="form-control"
     rows="{{ nLine }}"
     [placeholder]="placeholder"
-    [disabled]="isDisabled"
+    [disabled]="disabled"
     (keyup)="teclar()"
     [(ngModel)]="value"
   ></textarea>
